--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "slugify": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "^7.31.0",
@@ -22,15 +23,14 @@
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
   },
-  "prettier":{
+  "prettier": {
     "tabWidth": 4
   },
   "engines": {
     "node": ">=14.13.0"
   },
-  "scripts":{
+  "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   }
-
 }
